salesforce-metadata/objects/BahaMar_Experience__c.object
<CustomObject>
    <label>Baha Mar Experience</label>
    <pluralLabel>Baha Mar Experiences</pluralLabel>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>MinAge__c</fullName>
        <label>Minimum Age</label>
        <type>Number</type>
        <precision>3</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <type>Currency</type>
        <precision>16</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <type>Number</type>
        <precision>4</precision>
        <scale>0</scale>
    </fields>
</CustomObject>